--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy" : "npm run build&&gh-pages -d build"
+  },
+  "homepage": "https://danielcapacio.github.io/expense-tracker-test",
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
